--- a/gallery.css
+++ b/gallery.css
@@ -2,6 +2,20 @@ body {
     margin:0;
 }
 
+#footer {
+    text-align: center;
+    background-color: rgb(20, 65, 73);
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width:100%;
+    height: 2.5%;
+    z-index: 1;
+    page-break-after: always;
+}
+
 #navbar {
     text-align: center;
     background-color: rgb(20, 65, 73);
@@ -12,7 +26,7 @@ body {
     top: 0;
     width:100%;
     height: 7.5%;
-    z-index: 1;
+    z-index: 2;
 }
 
 #navbar ul {
@@ -57,6 +71,7 @@ body {
     max-width: 20%;
     position : fixed;
     overflow: auto;
+    page-break-after: always;
 }
 
 #image-block ul {
@@ -66,35 +81,48 @@ body {
 #image-block img {
     max-width: 90%;
     margin-top: 25px;
-    margin-left: 25px;
-    margin-right: 25px;
+    margin-left: 5px;
     margin-bottom: 25px;
-    padding: 2px;
-    float: left;
+    padding: 5px;
+    background-color : black;
+    border-radius: 25px;
     box-shadow: 20px -5px 50px rgba(0,0,0,0.3);
 }
 
 #container {
     float: right;
     box-shadow: 20px -5px 50px rgba(0,0,0,0.3);
-    margin-top: 5%;
-    margin-right: 15%;
+    margin-top: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     padding: 10px;
-    max-width: 100%;
-    max-height: 900px;
-    overflow: visible;
+    height: auto;
+    align-content: center;
+    max-width: 70%;
+    max-height: 70%;
+    overflow: hidden;
+    border-radius: 25px;
+    background-color: black;
 }
 
 #container img {
     width: auto;
-    max-height: 800px;
+    height : auto;
+    max-height: 95%;
+    max-width: 100%;
     align-content: center;
+    border-radius: 25px;
 }
 
-#desc {
+#container p {
+    color: white;
+    font : "Arial Bold";
+    font-size: 24px;
+    margin-bottom: -5px;
+    margin-top: -2px;
     text-align: center;  
-    font-style: italic;
 }
+
 
 .hidden {
     display : none;
@@ -102,4 +130,11 @@ body {
 
 .show {
     display: block;
+}
+
+.title {
+    page-break-inside: always;
+    height : 50px;
+    width: 50px;
+    background-color: aqua;
 }
