--- a/main.css
+++ b/main.css
@@ -49,4 +49,9 @@ a {
 
 a:focus {
     color : white;
+    text-shadow:
+    -2px -2px 0 grey,
+    2px -2px 0 black,
+    -2px 2px 0 black,
+    2px 2px 0 black;
 }
