--- a/projects.css
+++ b/projects.css
@@ -1,6 +1,5 @@
 body {
     margin:0;
-    max-height: 900px;
 }
 
 #navbar {
@@ -51,7 +50,8 @@ body {
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 5%;
-    height: 90%;
+    margin-bottom: 5%;
+    height: 80%;
     width: 80%;
 }
 
@@ -65,18 +65,36 @@ body {
 }
 
 div.movingImage {
-    width: 50px;
-    height:50px;
+    width: 250px;
+    height:250px;
     position:absolute;
-    padding: 5px;
-    margin: 15px;
+    overflow: hidden;
+    padding: none;
+    //margin: 15px;
+    border-bottom-right-radius: 180px;
+    border-top-right-radius: 180px;
+    border-bottom-left-radius: 180px;
+    border-top-left-radius: 180px;
 }
 
 .movingImage img {
-    max-height: 200px;
+    height: auto;
+    width: auto;
     z-index: 0;
+    //box-shadow: 20px -5px 50px rgba(0,0,0,0.3);
 }
 
 p {
     font-size: 40px;
+}
+
+.name {
+    padding-top: 120px;
+    padding-left: 90px;
+    position: fixed;
+}
+
+.name h {
+    font: "Arial Bold";
+    font-size: 24px;
 }
