--- a/projects.css
+++ b/projects.css
@@ -20,11 +20,11 @@ body {
 }
 
 #navbar li {
+    box-shadow: rgba(0.0, 0.0, 0.0, 0.3);
     float: right;
     font-size: 30px;
     font-style: oblique;
-    margin-left: 5px;
-    margin-right: 55px;
+    margin-right: 5px;
     margin-top: -15px;
     margin-bottom: -15px;
 }
@@ -59,18 +59,14 @@ body {
     list-style-type: none;
 }
 
-#container img {
-    margin: 10px;
-    max-height: 250px;
-}
 
 div.movingImage {
     width: 250px;
     height:250px;
     position:absolute;
     overflow: hidden;
-    padding: none;
-    //margin: 15px;
+    padding: 5px;
+    background-color: black;
     border-bottom-right-radius: 180px;
     border-top-right-radius: 180px;
     border-bottom-left-radius: 180px;
@@ -78,10 +74,12 @@ div.movingImage {
 }
 
 .movingImage img {
-    height: auto;
+    position: relative;
+    top: -25px;
+    left : -15px;
+    height: 300px;
     width: auto;
     z-index: 0;
-    //box-shadow: 20px -5px 50px rgba(0,0,0,0.3);
 }
 
 p {
